--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "type": "git",
     "url": "https://github.com/hoonto/teamcity-test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "~4.4.3",
+    "forever": "~0.11.1"
+  },
   "devDependencies": {
     "grunt": "*",
     "mocha": "*",
