--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "grunt": "*",
     "mocha": "*",
     "chai": "*",
-    "grunt-mocha-test": "~0.11.0"
+    "grunt-mocha-test": "~0.11.0",
+    "grunt-contrib-jshint": "~0.10.0"
   },
   "author": "",
   "license": "ISC",
